--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "react-native": "0.68.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.0"
+    "react-native-screens": "^3.18.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
